--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,41 @@
 server {
-    listen 80;
-    server_name 16.52.134.125 dumps.online www.dumps.online;
+    server_name dumps.online www.dumps.online;
 
-    # Frontend (React build)
+    # Serve React frontend (static files)
     location / {
         root /home/ubuntu/dumps/frontend/dumpster-dove/dist;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # Backend API
+    # Proxy API requests to FastAPI
     location /api/ {
-        proxy_pass http://localhost:8000;
+        proxy_pass http://localhost:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        # For Cloudflare - use CF-Connecting-IP header
+        proxy_set_header CF-Connecting-IP $http_cf_connecting_ip;
     }
 
-    # Health check
-    location /health {
-        proxy_pass http://localhost:8000;
-    }
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/dumps.online/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/dumps.online/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+}
+
+server {
+    if ($host = www.dumps.online) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    if ($host = dumps.online) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+    listen 80;
+    server_name dumps.online www.dumps.online;
+    return 404; # managed by Certbot
 }
