--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,21 @@
 server {
     server_name dumps.online www.dumps.online;
 
+    # Browser caching for static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
+        root /home/ubuntu/dumps/frontend/dumpster-dove/dist;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
     # Serve React frontend (static files)
     location / {
         root /home/ubuntu/dumps/frontend/dumpster-dove/dist;
         index index.html;
         try_files $uri $uri/ /index.html;
         
-        # Browser caching for static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-        
         # Don't cache HTML (so updates work)
-        location ~* \.html$ {
-            expires -1;
-            add_header Cache-Control "no-store, no-cache, must-revalidate";
-        }
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
     }
 
     # Proxy API requests to FastAPI
