Add PWA support: manifest, service worker, install button, and favicon

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,21 @@
 server {
     server_name dumps.online www.dumps.online;
 
+    # PWA manifest
+    location = /manifest.json {
+        root /home/ubuntu/dumps/frontend/dumpster-dove/dist;
+        default_type application/manifest+json;
+        add_header Cache-Control "no-cache";
+    }
+
+    # Service Worker
+    location = /sw.js {
+        root /home/ubuntu/dumps/frontend/dumpster-dove/dist;
+        default_type application/javascript;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Service-Worker-Allowed "/";
+    }
+
     # Browser caching for static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
         root /home/ubuntu/dumps/frontend/dumpster-dove/dist;
