Add PWA screenshots to manifest

--- a/frontend/dumpster-dove/public/manifest.json
+++ b/frontend/dumpster-dove/public/manifest.json
@@ -32,6 +32,20 @@
       "type": "image/png",
       "purpose": "any"
     }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/mobile.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshots/desktop.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "form_factor": "wide"
+    }
   ]
 }
 
