--- a/nginx.conf
+++ b/nginx.conf
@@ -16,11 +16,20 @@ server {
         add_header Service-Worker-Allowed "/";
     }
 
-    # Browser caching for static assets
+    # Serve static assets (JS, CSS, images) - MUST come before location /
+    location /assets/ {
+        root /home/ubuntu/dumps/frontend/dumpster-dove/dist;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+
+    # Browser caching for other static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
         root /home/ubuntu/dumps/frontend/dumpster-dove/dist;
         expires 1y;
         add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
     
     # Serve React frontend (static files)
